trunk/Archive2/fa/48beae40d6a2b1/output
main.cpp:34:5: error: no viable overloaded '*='
  z *= 42;
  ~ ^  ~~
1 error generated.
